--- a/circle/index.html
+++ b/circle/index.html
@@ -23,11 +23,11 @@ title: Math, Sonification, Plots
 <div class="circle_class">
         <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
         
-        <img src="https://rbobkoskie3.github.io/images/HC_Hyperbola.png" id="test" onclick = "change();"/>
+        <img src="https://rbobkoskie3.github.io/images/ST_Circle.png" id="test" onclick = "change();"/>
         <script>
                 function change() {
-                        var img1 = "https://rbobkoskie3.github.io/images/ST_Parabola.png",
-                            img2 = "https://rbobkoskie3.github.io/images/HC_Hyperbola.png";
+                        var img1 = "https://rbobkoskie3.github.io/images/ST_Circle.png",
+                            img2 = "https://rbobkoskie3.github.io/images/HC_Circle.png";
                         var imgElement = document.getElementById('test');
                         imgElement.src = (imgElement.src === img1)? img2 : img1;
                 }
