--- a/circle/index.html
+++ b/circle/index.html
@@ -6,9 +6,9 @@ title: Math, Sonification, Plots
 <head>
         <style>
         .button {
-                background-color: #000000;
-                border: none;
-                color: yellow;
+                background-color: #4CAF50; /* Green background */
+                border: 1px solid green; /* Green border */
+                color: white; /* White text */
                 padding: 15px 32px;
                 text-align: center;
                 text-decoration: none;
