--- a/circle/index.html
+++ b/circle/index.html
@@ -27,10 +27,10 @@ title: Math, Sonification, Plots
              title="Graph of a Circle w/o High Contrast" id="test" onclick = "change();"/>
         <script>
                 function change() {
-                        var img1 = "https://rbobkoskie3.github.io/images/ST_Circle.png"
-                                    title="Graph of a Circle w/o High Contrast",
-                            img2 = "https://rbobkoskie3.github.io/images/HC_Circle.png"
-                                    title="Graph of a Circle with High Contrast";
+                        var img1 = "src="https://rbobkoskie3.github.io/images/ST_Circle.png"
+                                    title="Graph of a Circle w/o High Contrast"",
+                            img2 = "src="https://rbobkoskie3.github.io/images/HC_Circle.png"
+                                    title="Graph of a Circle with High Contrast"";
                         var imgElement = document.getElementById('test');
                         imgElement.src = (imgElement.src === img1)? img2 : img1;
                 }
