--- a/circle/index.html
+++ b/circle/index.html
@@ -22,6 +22,15 @@ title: Math, Sonification, Plots
                 text-align: justify;
                 text-justify: inter-word;
             }
+
+        .fit {  /* set relative picture size */
+                max-width: 100%;
+                max-height: 100%;
+             }
+        .center {
+                display: block;
+                margin: auto;
+                }
         </style>
 </head>
 
@@ -29,9 +38,17 @@ title: Math, Sonification, Plots
         <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
         
         <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
-        <img src="https://rbobkoskie3.github.io/images/ST_Circle.png"
+        <img class="center fit" src="https://rbobkoskie3.github.io/images/ST_Circle.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" id="test" onclick = "change();"/>
         <script>
+                function set_body_height() { // set body height = window height
+                        $('body').height($(window).height());
+                }
+                $(document).ready(function() {
+                        $(window).bind('resize', set_body_height);
+                        set_body_height();
+                });
+  
                 function change() {
                         var img1 = "https://rbobkoskie3.github.io/images/ST_Circle.png",
                             img2 = "https://rbobkoskie3.github.io/images/HC_Circle.png";
