--- a/index.html
+++ b/index.html
@@ -3,8 +3,38 @@ layout: default
 title: Math, Sonification, Plots
 ---
 
+<head>
+        <style>
+        .fit {  /* set relative picture size */
+                max-width: 100%;
+                max-height: 100%;
+             }
+        .center {
+                display: block;
+                margin: auto;
+                }
+        </style>
+</head>
+
 <div class="math_class">
 
-	<img src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast">
-
+	<img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast">
+        <img class="center fit" src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
+             title="Click on Image to Toggle Between High Contrast <> Standard Contrast" id="test" onclick = "change();"/>
+        <script>
+                function set_body_height() { // set body height = window height
+                        $('body').height($(window).height());
+                }
+                $(document).ready(function() {
+                        $(window).bind('resize', set_body_height);
+                        set_body_height();
+                });
+  
+                function change() {
+                        var img1 = "https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png",
+                            img2 = "https://rbobkoskie3.github.io/images/HC_3D_Hyperbola.png";
+                        var imgElement = document.getElementById('test');
+                        imgElement.src = (imgElement.src === img1)? img2 : img1;
+                }
+        </script>
 </div>
