--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@ title: Math, Sonification, Plots
 
 <head>
         <style>
+        div {
+                text-align: justify;
+                text-justify: inter-word;
+            }
+        
         .fit {  /* set relative picture size */
                 max-width: 100%;
                 max-height: 100%;
              }
+        
         .center {
                 display: block;
                 margin: auto;
@@ -19,6 +25,7 @@ title: Math, Sonification, Plots
 <div class="math_class">
 
 	<!-- img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
+        <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
         <img class="center fit" src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" id="test" onclick = "change();"/>
         <script>
