--- a/line/index.html
+++ b/line/index.html
@@ -73,7 +73,7 @@ title: Math, Sonification, Plots
         <script>
                 function change_2() {
                         var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png",
-                            img2 = "https://rbobkoskie3.github.io/images/HC_Hrz_Line.png";
+                            img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
                         var imgElement = document.getElementById('img_2');
                         imgElement.src = (imgElement.src === img1)? img2 : img1;
                 }
