--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -51,7 +51,7 @@ title: Math, Sonification, Plots
         </script>
         
         <input type="button" class="button" value="SONIFICATION"  onclick="play()">
-        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/440.wav" ></audio>
+        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/hyperbola.mp4" ></audio>
         
         <script>
                 var isPlaying = false
