--- a/circle/index.html
+++ b/circle/index.html
@@ -62,6 +62,7 @@ title: Math, Sonification, Plots
                                 isPlaying = true
                         }
                         else {
+                                audio.currentTime = 0
                                 audio.pause();
                                 isPlaying = false
                         }
