--- a/circle/index.html
+++ b/circle/index.html
@@ -51,19 +51,29 @@ title: Math, Sonification, Plots
         </script>
         
         <input type="button" class="button" value="SONIFICATION"  onclick="play()">
-        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/440.wav" ></audio>
+        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/circle.mp4" ></audio>
         
         <script>
                 var isPlaying = false
                 function play() {
                         var audio = document.getElementById("audio");
+                        audio.volume = 0.9;
                         if (!isPlaying) {
                                 audio.play();
                                 isPlaying = true
+                                <p>PLAYING</p>
                         }
                         else {
-                                audio.pause();
-                                isPlaying = false
+                                if (!audio.currentTime.ended) {
+                                    audio.pause();
+                                    isPlaying = true
+                                    <p>PAUSED ...</p>
+                                }
+                                else {
+                                    audio.load();
+                                    isPlaying = false
+                                    <p>re LOAD</p>
+                                }
                         }
                 }
         </script>
