--- a/circle/index.html
+++ b/circle/index.html
@@ -57,6 +57,7 @@ title: Math, Sonification, Plots
                 var isPlaying = false
                 function play() {
                         var audio = document.getElementById("audio");
+                        audio.volume = 0.4;
                         if (!isPlaying) {
                                 audio.play();
                                 isPlaying = true
