--- a/circle/index.html
+++ b/circle/index.html
@@ -68,8 +68,8 @@ title: Math, Sonification, Plots
                                     isPlaying = false
                                 }
                                 else {
-                                    audio.load();
-                                    isPlaying = false
+                                    audio.play();
+                                    isPlaying = true
                                 }
                         }
                 }
