--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -57,13 +57,20 @@ title: Math, Sonification, Plots
                 var isPlaying = false
                 function play() {
                         var audio = document.getElementById("audio");
+                        audio.volume = 1.0;
                         if (!isPlaying) {
                                 audio.play();
                                 isPlaying = true
                         }
                         else {
-                                audio.pause();
-                                isPlaying = false
+                                if (!audio.ended) {
+                                    audio.pause();
+                                    isPlaying = false
+                                }
+                                else {
+                                    audio.play();
+                                    isPlaying = true
+                                }
                         }
                 }
         </script>
