--- a/line/index.html
+++ b/line/index.html
@@ -57,13 +57,20 @@ title: Math, Sonification, Plots
                 var isPlaying = false
                 function play_1() {
                         var audio = document.getElementById("audio_1");
+                        audio.volume = 1.0;
                         if (!isPlaying) {
                                 audio.play();
                                 isPlaying = true
                         }
                         else {
-                                audio.pause();
-                                isPlaying = false
+                                if (!audio.ended) {
+                                    audio.pause();
+                                    isPlaying = false
+                                }
+                                else {
+                                    audio.play();
+                                    isPlaying = true
+                                }
                         }
                 }
         </script>
@@ -86,13 +93,20 @@ title: Math, Sonification, Plots
                 var isPlaying = false
                 function play_2() {
                         var audio = document.getElementById("audio_2");
+                        audio.volume = 1.0;
                         if (!isPlaying) {
                                 audio.play();
                                 isPlaying = true
                         }
                         else {
-                                audio.pause();
-                                isPlaying = false
+                                if (!audio.ended) {
+                                    audio.pause();
+                                    isPlaying = false
+                                }
+                                else {
+                                    audio.play();
+                                    isPlaying = true
+                                }
                         }
                 }
         </script>
@@ -117,13 +131,20 @@ title: Math, Sonification, Plots
                 var isPlaying = false
                 function play_3() {
                         var audio = document.getElementById("audio_3");
+                        audio.volume = 1.0;
                         if (!isPlaying) {
                                 audio.play();
                                 isPlaying = true
                         }
                         else {
-                                audio.pause();
-                                isPlaying = false
+                                if (!audio.ended) {
+                                    audio.pause();
+                                    isPlaying = false
+                                }
+                                else {
+                                    audio.play();
+                                    isPlaying = true
+                                }
                         }
                 }
         </script>
