--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@ title: Math, Sonification, Plots
 <div class="math_class">
 
 	<!-- img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
+        <h1>About the Project</h1>
+        <div><p>
+           This website is part of a human factors study to improve ergonomics for the visually impaired.
+           The concept originates from a <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology">CS 6460: Educational Technology</a> class project.
+           In addition to this website, I have built a
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a> to gather information for utilizing High Contrast Settings.
+        </p></div>
+        <br><br>
+
         <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
         <img class="center fit" src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" id="test" onclick = "change();"/>
