--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@ title: Math, Sonification, Plots
         <h1>About the Project</h1>
         <div><p>
            This website is part of a human factors study to improve ergonomics for the visually impaired.
-           The concept originates from a <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology">CS 6460: Educational Technology</a> class project.
-           In addition to this website, I have built a
-           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a> to gather information for utilizing High Contrast Settings.
+           The concept originates from a
+           <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology">CS 6460: Educational Technology</a>
+           class project. In addition to this website, I have built a
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a>
+           to gather information on the High Contrast Settings and Sonification implemented on the website.
+           <br>
+           I encourage visitors to peruse the Math Plots: LINES, CIRCLES, PARABOLAS, HYPERBOLAS, and play with the
+           High Contrast Settings and Sonification. Please provide comments and suggestions, and following your visit, kindly take the
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a>.
         </p></div>
         <br><br>
 
