--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ title: Math, Sonification, Plots
            class project. In addition to this website, I have built a
            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a>
            to gather information on the High Contrast Settings and Sonification implemented on the website.
-           <br>
+        </p></div>
+        <br>
+        <div><p>
            I encourage visitors to peruse the Math Plots: LINES, CIRCLES, PARABOLAS, HYPERBOLAS, and play with the
            High Contrast Settings and Sonification. Please provide comments and suggestions, and following your visit, kindly take the
            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a>.
